2008-11-23  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/proc_reg.h (get_cr0, get_cr2, get_cr3, get_cr4, get_tr,
	get_ldt): Add volatile qualifier to asm statement to prevent gcc from
	optimizing it away since there seems to be no way to clobber these
	properly in the set_* macros.

2008-11-17  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (install_sh, INSTALL): Point to `build-aux/install-sh'.
	Make use of its `-C' option.

	* configure.ac: Require GNU Automake 1.10.1.
	* Makefile.am: Adapt.
	* Makefile.correct_output_files_for_.S_files.patch: Remove.

2008-07-19  Barry deFreese  <bdefreese@debian.org>

	* device/device_emul.h (struct device_emulation_ops): Make members
	reference, dealloc, dev_to_port, write_trap, and writev_trap take
	mach_device_t parameter instead of void *.
	* i386/i386at/autoconf.c: Make forward declarations for comintr()
	and lprintr() match prototype. Add brackets around initialization
	members for bus_ctlr and bus_device structs.
	* i386/i386at/conf.c (dev_name_list): Pass nomap instead of nulldev
	for map field.
	* i386/i386at/pic_isa.c (intnull, fpintr, hardclock, kdintr,
	prtnull): Declare the type of the value returned by functions to void.

2008-11-13  Thomas Schwinge  <tschwinge@gnu.org>

	[task #8135 -- PAE for GNU Mach]
	* i386/configfrag.ac (enable_pae): Add checks: this is ix86-only.
	* doc/mach.texi (Configuration): Document the new option.

2008-11-11  Shakthi Kannan  <shakshurd@gmail.com>

	* kern/eventcount.c (evc_wait_clear): Remove unused variable 'ret'.

2008-11-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[task #8135 -- PAE for GNU Mach]
	* i386/configfrag.ac: Add --enable-pae option, which defines PAE.
	* i386/i386/i386asm.sym (PDPSHIFT, PDEMASK, PTE_SIZE): New assembly
	macros.
	* i386/i386/locore.S (copyout_retry) [PAE]: Use page directory pointer
	bits, take PTE_SIZE into account.
	* i386/i386at/model_dep.c (i386at_init) [PAE]: Set second initial 2MB